Add exceptions, fix optionals